--- a/gvasquezr/src/app/components/dashboard/dashboard.component.html
+++ b/gvasquezr/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,12 @@
 <app-menu></app-menu>
-<div>
-  <h1>Bienvenid@ a BIT</h1>
+
+<div class="container pt-1">
+    <div>
+        <h1>Mensaje de Bienvenida</h1>
+    </div>
+    <div>
+        <p>Hola, a ingresado satisfactoriamente al sitio web de BIT con el correo electrónico '{{userEmail}}'</p>
+    </div>
 </div>
-<div>
-    <p>Bienvenid@, a ingresado satisfactoriamente al sitio web de BIT con el correo electrónico '{{userCorreo}}'</p>
-</div>
+
 <app-footer></app-footer>
