--- a/gvasquezr/src/app/components/footer/footer.component.html
+++ b/gvasquezr/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <nav class="footer navbar navbar-expand-lg sticky-top navbar-toggleable-sm">
-    <section class="collapse navbar-collapse" id="navbarNav">
+    <section class="navbar-collapse" id="navbarNav" style="text-align: center;">
         <p class="mr-2">Derechos reservados. 2021. Alexander Vásquez Rodríguez |</p>
         <img class="imagenFooter mr-2" src="assets/icons/facebook.png" alt="facebook" />
         <img class="imagenFooter mr-2" src="assets/icons/twitter.png" alt="twitter" />
