--- a/gvasquezr/src/app/components/menu/menu.component.html
+++ b/gvasquezr/src/app/components/menu/menu.component.html
@@ -20,7 +20,7 @@
         <article class="login d-flex flex-row justify-content-center mt-4">
             <section class="icon-details">
                 <a id="login2" class="nav-link" href="#">
-                    <img src="assets/icons/salir.svg" alt="logout" width="35px">
+                    <img src="assets/icons/salir.svg" alt="logout" width="35px" (click)="salir()">
                 </a>
                 <p id="text2">Logout</p>
             </section>
