--- a/gvasquezr/src/app/components/characters/characters.component.html
+++ b/gvasquezr/src/app/components/characters/characters.component.html
@@ -1,43 +1,47 @@
 <app-menu></app-menu>
-<div>
-    <h1>Characters Of History</h1>
+
+<div class="container pt-1">
+    <div>
+        <h1>Characters Of History</h1>
+    </div>
+    <div>
+        <table class="table">
+            <tbody>
+              <tr>
+                <td>
+                    <img class="imagen" src="assets/images/billgates.jpeg">
+                </td>
+                <td>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
+                </td>
+                <td>
+                    <img class="imagen" src="assets/images/einstein.png"/>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    <img class="imagen" src="assets/images/frida.jpg"/>
+                </td>
+                <td>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
+                </td>
+                <td>
+                    <img class="imagen" src="assets/images/hitler.jpg"/>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
 </div>
-<div>
-    <table class="table">
-        <tbody>
-          <tr>
-            <td>
-                <img class="imagen" src="assets/images/billgates.jpeg">
-            </td>
-            <td>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
-            </td>
-          </tr>
-          <tr>
-            <td>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
-            </td>
-            <td>
-                <img class="imagen" src="assets/images/einstein.png"/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-                <img class="imagen" src="assets/images/frida.jpg"/>
-            </td>
-            <td>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
-            </td>
-          </tr>
-          <tr>
-            <td>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, nihil consectetur fugiat eveniet magnam magni ad facilis, vero minus quam deserunt quaerat molestias, blanditiis officiis dolorem. Nobis nulla sed placeat!
-            </td>
-            <td>
-                <img class="imagen" src="assets/images/hitler.jpg"/>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-</div>
+
 <app-footer></app-footer>
