--- a/gvasquezr/src/app/components/login/login.component.html
+++ b/gvasquezr/src/app/components/login/login.component.html
@@ -1,20 +1,29 @@
 <app-menu-login></app-menu-login>
+
 <div class="container pt-5">
-    <h1>Inicio de Sesión</h1>
+    <h1>Angular BIT</h1>
+    <h2>Inicio de Sesión</h2>
+    <p>Para iniciar sesión, ingrese su dirección de correo electrónico y su contraseña.</p>
     <div class="card p-4">
-        <form ngNativeValidate (ngSubmit)='ingresar()'>
-            <div class="mb-3">
-                <label for="inputCorreo" class="form-label">Correo Electrónico</label>
-                <input type="email" name="userCorreo" [(ngModel)]="userInfo.correo" class="form-control" id="inputCorreo" required/>
-            </div>
-            <div class="mb-3">
-                <label for="inputClave" class="form-label">Contraseña</label>
-                <input type="password" name="userClave" [(ngModel)]="userInfo.clave" class="form-control" id="inputClave" required/>
-            </div>
-            <button type="submit" class="btn btn-primary mr-2">Ingresar</button>
-            
-            <button type="reset" (click)='limpiar()' class="btn btn-primary">Limpiar</button>
+        <form ngNativeValidate [formGroup]="formLogin" (ngSubmit)='ingresar()'>
+            <section class="form-group">
+                <div class="mb-3">
+                    <label for="inputCorreo" class="form-label">Correo Electrónico</label>
+                    <input type="email" id="inputCorreo" formControlName="correo" class="form-control" required/>
+                </div>
+            </section>
+            <section class="form-group">
+                <div class="mb-3">
+                    <label for="inputClave" class="form-label">Contraseña</label>
+                    <input type="password" id="inputClave" formControlName="clave" class="form-control" required/>
+                </div>
+            </section>
+            <section class="form-group">
+                <button type="submit" class="btn btn-primary mr-2" [disabled]="!formLogin.valid">Iniciar Sesión</button>
+                <button type="reset" (click)='limpiar()' class="btn btn-primary">Limpiar</button>
+            </section>
         </form>
     </div>
 </div>
+
 <app-footer></app-footer>
