--- a/gvasquezr/src/styles.css
+++ b/gvasquezr/src/styles.css
@@ -1,26 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-    font-family: 'ABeeZee', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
- .footer {
+.footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 10px;
+    padding: 2px;
+    box-shadow: 2px 2px 4px rgba(.05,.05,.05,.05);
 }
 
 .logo-history {
-    width: 180px;
-    height: 40px;
+    width: 210px;
+    height: 50px;
+    padding: 4px;
 }
 
 .navbar {
     box-shadow: 0 2px 4px rgba(0, 0, 0, .05);
-    min-height: 100px;
-    font-size: 1.1rem;
+    padding: 4px;
     background: #fff;
 }
 
@@ -40,12 +40,12 @@ body {
 
 .nav-user {
     display: block;
-    padding-top: 8;
+    padding-top: 4;
     color: crimson;
 }
 
 .carousel-item>img {
     object-fit: cover;
     width: 100%;
-    height: 550px;
+    height: 500px;
 }
